# Stealth-Engine-sample-game

./: .gitattributes  .gitignore  .gitmodules  .project  CMakeLists.txt  Makefile  Stealth.sublime-project  Stealth.sublime-workspace  Tasks.xlsx  build.py  build_unix.py  run.py  stop.py
Stealth/: CMakeLists.txt
Stealth.xcodeproj/: project.pbxproj
Stealth.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Stealth/cmake/: FindOpenGL.cmake
Stealth/game/include/: GameApplication.h  Guard.h  SdlApplication.h  Spy.h
Stealth/game/include/application/: GameApplication.h  StealthGameApplication.h
Stealth/game/include/component/: CharacterMotor.h  DynamicCharacterMotor.h
Stealth/game/include/controller/: AIController.h  Controller.h  PlayerController.h
Stealth/game/include/entity/: AICharacter.h  Character.h  DynamicCharacter.h  Guard.h  PlayerCharacter.h  PlayerDynamicCharacter.h  Spy.h
Stealth/game/src/: main.cpp
Stealth/game/src/application/: ApplicationContainer.cpp  ApplicationContainer.h  GameApplication.cpp  GameApplication.h  SdlApplication.cpp  StealthGameApplication.cpp
Stealth/game/src/component/: CharacterMotor.cpp  DynamicCharacterMotor.cpp
Stealth/game/src/controller/: AIController.cpp  Controller.cpp  PlayerController.cpp
Stealth/game/src/entity/: AICharacter.cpp  Character.cpp  DynamicCharacter.cpp  Guard.cpp  Guard.h  PlayerCharacter.cpp  PlayerDynamicCharacter.cpp  Spy.cpp  Spy.h
Stealth/game/src/service/: Locator.cpp
Stealth/src/engine/entity/: Character.cpp  Character.h  Controller.h  GameObject.cpp  GameObject.h  HumanController.cpp  Intention.h
Stealth/src/engine/enum/: Button.h  ButtonState.h
Stealth/src/engine/geometry/: Point3.h
Stealth/src/engine/helper/: helper.h
Stealth/src/engine/scene/: GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
Stealth/src/engine/service/: InputManager.cpp  InputManager.h  Locator.cpp  Locator.h
Stealth/src/game/: main.cpp
Stealth/src/game/application/: GameApplication.cpp  GameApplication.h  SdlApplication.cpp
Stealth/src/game/entity/: Character.cpp  Character.h  Guard.cpp  Guard.h  Spy.cpp  Spy.h
Stealth/src/game/service/: Locator.cpp  Locator.h
